# astra-core

./: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  nginx-chat-limit.conf  prompt.md  pyproject.toml  render.yaml  requirements.txt  schemas.py  zodiac.py
app/: db.py  main.py
app/knowledge/: knowledge_base.py
app/models/: __init__.py  conversation.py  message.py  schema.sql  system_prompt.py  user.py
app/repositories/: conversation_repo.py  message_repo.py  user_repo.py
app/services/: amap_geo.py  chart_service.py  chat_service.py  llm_service.py  user_service.py
ephemeris/: .gitkeep
frontend/: app.js  chat.css  chat.html  chat.js  index.html  prompt.html  prompt.js  style.css
nginx/ecs/: 00-limits.conf  DEPLOY.txt  astra-original.conf  astra-site-https-certbot.example.conf
scripts/: init_db.py
